# moex_broker_toolkit

./: .gitignore  main.py  path  pyproject.toml
fin_analysis/: __init__.py  company.py  fin_processor.py  ir_rating.py
finance_reports/: HeadHunter (HEAD).csv  Henderson (HNFG).csv  Softline (SOFL).csv  АЛРОСА (ALRS).csv  АФК Система (AFKS).csv  Акрон (AKRN).csv  Аренадата (DATA).csv  ВсеИнструменты.ру (VSEH).csv  Вуш Холдинг (WUSH).csv  ГМК Норникель (GMKN).csv  Газпром (GAZP).csv  Газпромнефть (SIBN).csv  Группа Астра (ASTR).csv  ДВМП (FESH).csv  ЕВРОТРАНС (EUTR).csv  Займер (ZAYM).csv  ЛСР Группа (LSRG).csv  М.Видео-Эльдорадо (MVID).csv  МТС (MTSS).csv  МТС Банк (MBNK).csv  НоваБев Групп (BELU).csv  Окей (OKEY).csv  Пермэнергосбыт (PMSB).csv  Промомед (PRMD).csv  Распадская (RASP).csv  Россети Ленэнерго (LSNG).csv  Россети Центр (MRKC).csv  Россети Центр и Приволжье (MRKP).csv  Ростелеком (RTKM).csv  Русал (RUAL).csv  СПб Биржа (SPBE).csv  Северсталь (CHMF).csv  Совкомбанк (SVCB).csv  Совкомфлот (FLOT).csv  Софтлайн (SOFL).csv  Т-Технологии (T).csv  ФИКС ПРАЙС (FIXR).csv  Черкизово (GCHE).csv  Эл5 Энерго (ELFV).csv  Эталон (ETLN).csv  (+1 more)
moex_broker_toolkit/: __init__.py  all_stock_info.py  balance_report.py  broker_parser.py  distribution_table.py  md_report_strategy.py  report_generator.py  report_registry.py  report_strategy.py  sber_parser.py  sber_splitter.py  table_splitter.py  target_allocator.py  vtb_parser.py  vtb_splitter.py
support_files/: .~lock.index_fund.xlsx#  IR-рейтинг компаний.html  index_fund.xlsx  ir_rating.xlsx  rates_all.csv
(+50 files in other folders)
