[project]
name = "moex-broker-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "lxml>=6.0.1",
    "matplotlib>=3.10.7",
    "pandas[excel]>=2.3.2",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
]
